--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "template",
   "version": "1.0.0",
   "private": true,
   "description": "使用taro+react+typescript+redux+tard搭建微信小程序、h5模版；包括多包场景、图片使用iconfont等",
@@ -18,7 +18,7 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:weapp": "cross-env NODE_ENV=prod npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
@@ -54,6 +54,9 @@
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.3.11",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "dotenv-flow": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-taro": "3.3.11",
     "eslint-plugin-import": "^2.12.0",
