--- a/package.json
+++ b/package.json
@@ -10,23 +10,21 @@
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
     "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "cross-env NODE_ENV=prod npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
+    "dev:weapp": "npm run build:weapp -- --watch",
     "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "build-pre:weapp": "cross-env APP_ENV=pre taro build --type weapp",
+    "build-pre:h5": "cross-env APP_ENV=pre taro build --type h5",
+    "dev-pre:weapp": "cross-env APP_ENV=pre npm run build:weapp -- --watch",
+    "dev-pre:h5": "cross-env APP_ENV=pre npm run build:h5 -- --watch",
+    "build-test:weapp": "cross-env APP_ENV=test taro build --type weapp",
+    "build-test:h5": "cross-env APP_ENV=test taro build --type h5",
+    "dev-test:weapp": "cross-env APP_ENV=test npm run build:weapp -- --watch",
+    "dev-test:h5": "cross-env APP_ENV=test npm run build:h5 -- --watch",
+    "build-prod:weapp": "cross-env APP_ENV=prod taro build --type weapp",
+    "build-prod:h5": "cross-env APP_ENV=prod taro build --type h5",
+    "dev-prod:weapp": "cross-env APP_ENV=prod npm run build:weapp -- --watch",
+    "dev-prod:h5": "cross-env APP_ENV=prod npm run build:h5 -- --watch"
   },
   "browserslist": [
     "last 3 versions",
