--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tarojs/react": "3.3.11",
     "@tarojs/runtime": "3.3.11",
     "@tarojs/taro": "3.3.11",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
