--- a/package.json
+++ b/package.json
@@ -50,22 +50,33 @@
     "@tarojs/webpack-runner": "3.3.11",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.3.11",
+    "commitlint-config-selling": "0.0.1",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "3.3.11",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.4",
     "stylelint": "9.3.0",
+    "stylelint-config-selling": "0.0.1",
     "taro-iconfont-cli": "^3.3.0",
     "typescript": "^4.2.3"
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,ts,tsx,vue}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "src/**/*.less": [
+      "stylelint --config  ./.stylelintrc --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
