--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "dotenv-flow": "^3.2.0",
     "eslint-config-selling": "0.0.1",
     "husky": "^7.0.4",
-    "stylelint": "9.3.0",
+    "stylelint-config-selling": "0.0.1",
     "taro-iconfont-cli": "^3.3.0",
     "typescript": "^4.2.3"
   },
