--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@tarojs/taro": "3.3.11",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
